--- a/Scss/sass.css
+++ b/Scss/sass.css
@@ -1,6 +1,165 @@
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+}
+
+.container {
+  width: 80%;
+  padding: 0 100px;
+  margin: 0 auto;
+}
+
 .hero {
   background-image: url("../assets/main_img.png");
-  height: 1080px;
-  width: 1920px;
+  background-repeat: no-repeat;
+  height: 970px;
+  width: 100%;
+  position: relative;
+  z-index: 0;
+}
+
+.hero::before {
+  position: absolute;
+  content: "";
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background-color: #1a2538;
+  opacity: 0.4;
+  z-index: -1;
+}
+
+.hero-navbar {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 94px;
+  border-bottom: 1px rgba(235, 235, 240, 0.2) solid;
+  border-left: none;
+  border-right: none;
+}
+
+.hero-navigation-logo {
+  border-right: 1px rgba(235, 235, 240, 0.2) solid;
+  height: 94px;
+  width: 240px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.hero-navbar a, li {
+  text-decoration: none;
+  list-style: none;
+}
+
+.hero-nav-links {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  gap: 20px;
+}
+
+.hero-navigation {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  gap: 40px;
+  color: white;
+  font-family: sans-serif;
+  font-size: 14px;
+  font-weight: 200;
+}
+
+.hero-navigation i {
+  color: #5c8ee5;
+}
+
+.hero-navbar * {
+  color: white;
+}
+
+.hero-navigation-btn {
+  background-color: #5c8ee5;
+  width: 302px;
+  height: 94px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-size: 14px;
+  font-family: sans-serif;
+  font-weight: 400;
+}
+
+.hero-main {
+  margin-top: 150px;
+}
+
+.hero-text-hr {
+  width: 150px;
+  height: 2px;
+  background-color: #5c8ee5;
+}
+
+.hero-main {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  color: white;
+}
+
+.hero-text {
+  font-family: "Bebas Neue", sans-serif;
+  margin-top: 50px;
+}
+
+.hero-main-text {
+  font-size: 58px;
+  font-weight: 400;
+  line-height: 150%;
+  letter-spacing: 0%;
+}
+
+.hero-main span {
+  font-family: "Bebas Neue", sans-serif;
+}
+
+.hero-subtext {
+  font-family: "Noto";
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 160%;
 }
 /*# sourceMappingURL=sass.css.map */
