--- a/Scss/sass.scss
+++ b/Scss/sass.scss
@@ -1,7 +1,129 @@
 @import './__fonts.scss';
+@import './__default.scss';
+@import './__colors.scss';
+@import './__media.scss';
+
+.container{
+    width: 80%;
+    padding: 0 100px;
+    margin: 0 auto;
+}
 
 .hero{
     background-image: url('../assets/main_img.png');
-    height: 1080px;
-    width: 1920px;
+    background-repeat: no-repeat;
+    height: 970px;
+    width: 100%;
+    position: relative;
+    z-index: 0;
+}
+
+.hero::before{
+    position: absolute;
+    content: "";
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background-color: rgb(26, 37, 56);
+    opacity: 0.4;
+    z-index: -1;
+}
+
+.hero-navbar{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 94px;
+    border-bottom: 1px rgba(235, 235, 240, 0.2) solid;
+    border-left: none;border-right: none;
+}
+
+.hero-navigation-logo{
+    border-right: 1px rgba(235, 235, 240, 0.2) solid;
+    height: 94px;
+    width: 240px;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+}
+
+.hero-navbar a, li{
+    text-decoration: none;
+    list-style: none;
+}
+
+.hero-nav-links{
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+}
+
+.hero-navigation{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 40px;
+    color: white;
+    font-family: sans-serif;
+    font-size: 14px;
+    font-weight: 200;
+}
+
+.hero-navigation i{
+    color: $main-color;
+}
+
+.hero-navbar *{
+    color: white;
+}
+
+.hero-navigation-btn{
+    background-color: $main-color;
+    width: 302px;
+    height: 94px;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    font-size: 14px;
+    font-family: sans-serif;
+    font-weight: 400;
+}
+
+.hero-main{
+    margin-top: 150px;
+}
+
+.hero-text-hr{
+    width: 150px;
+    height: 2px;
+    background-color: $main-color;
+}
+
+.hero-main{
+    display: flex;
+    color: white;
+}
+
+.hero-text{
+    font-family: $main-font;
+    margin-top: 50px;
+}
+
+.hero-main-text{
+    font-size: 58px;
+    font-weight: 400;
+    line-height: 150%;
+    letter-spacing: 0%;
+}
+
+.hero-main span{
+    font-family: $main-font;
+}
+
+.hero-subtext{
+    font-family: $subtext-font;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 160%;
 }
