--- a/Scss/sass.css
+++ b/Scss/sass.css
@@ -15,6 +15,7 @@ body {
 
 .hero {
   background-image: url("../assets/main_img.png");
+  background-size: cover;
   background-repeat: no-repeat;
   height: 970px;
   width: 100%;
@@ -161,5 +162,80 @@ body {
   font-size: 16px;
   font-weight: 400;
   line-height: 160%;
+  margin-top: 50px;
+  display: block;
+}
+
+.hero-footer {
+  position: absolute;
+  bottom: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  border: 1px rgba(235, 235, 240, 0.2) solid;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.hero-footer-elements {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 200px;
+  height: 168px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-right: 1px rgba(235, 235, 240, 0.2) solid;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: start;
+  padding-left: 20px;
+}
+
+.hero-footer-elements i {
+  color: #5c8ee5;
+  font-size: 36px;
+}
+
+.hero-footer-text {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 160%;
+}
+
+.hero-about-company {
+  margin-top: 50px;
+}
+
+.hero-btn {
+  width: 313px;
+  height: 76px;
+  background-color: #5c8ee5;
+  border: none;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  font-size: 16px;
+  font-weight: 600;
+}
+
+.hero-btn a {
+  text-decoration: none;
+  color: white;
 }
 /*# sourceMappingURL=sass.css.map */
