--- a/Scss/sass.css
+++ b/Scss/sass.css
@@ -9,7 +9,7 @@ body {
 
 .container {
   width: 90%;
-  padding: 0 100px;
+  padding: 0 75px;
   margin: 0 auto;
 }
 
@@ -633,7 +633,7 @@ body {
 .partner-text {
   font-family: sans-serif;
   font-weight: 400;
-  font-size: 35px;
+  font-size: 30px;
   line-height: 120%;
   letter-spacing: 0%;
 }
@@ -675,7 +675,6 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  gap: 50px;
 }
 
 .partner-elements {
@@ -718,5 +717,289 @@ body {
 .partner-burger-icon img {
   width: 70px;
   height: 70px;
+}
+
+.blog {
+  margin-top: 100px;
+}
+
+.blog-span {
+  content: "";
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  background-color: #5c8ee5;
+  width: 150px;
+  height: 2px;
+}
+
+.blog-text {
+  font-family: "Bebas Neue", sans-serif;
+  font-size: 30px;
+  font-weight: 400;
+  line-height: 120%;
+  letter-spacing: 0%;
+}
+
+.blog-left-side {
+  background-image: url("../assets/blog-left-side.png");
+  width: 600px;
+  height: 300px;
+  padding: 80px 10px 5px 10px;
+}
+
+.blog-right-side {
+  background-image: url("../assets/blog-right-side.png");
+  width: 600px;
+  height: 300px;
+  padding: 113px 10px 5px 10px;
+  position: relative;
+  z-index: 0;
+}
+
+.blog-sides {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-top: 50px;
+}
+
+.blog-right-side::before {
+  content: "";
+  background-color: rgba(41, 45, 51, 0.6);
+  position: absolute;
+  z-index: -1;
+  opacity: 0.9;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+}
+
+.blog-left-text {
+  font-family: "Noto", sans-serif;
+  font-weight: 200;
+  font-size: 28px;
+  line-height: 140%;
+  letter-spacing: 0%;
+  color: white;
+}
+
+.blog-left-subtext {
+  font-family: "Noto", sans-serif;
+  font-size: 16px;
+  color: white;
+  font-weight: 100;
+  line-height: 160%;
+  letter-spacing: 0%;
+}
+
+.blog-right-text {
+  font-family: "Noto", sans-serif;
+  font-weight: 400;
+  font-size: 28px;
+  line-height: 160%;
+  letter-spacing: 0%;
+  color: white;
+}
+
+.blog-right-subtext {
+  font-family: "Noto", sans-serif;
+  font-size: 16px;
+  color: white;
+  font-weight: 100;
+  line-height: 160%;
+  letter-spacing: 0%;
+}
+
+.blog-footer-link::before {
+  content: "";
+  background-color: #5c8ee5;
+  width: 40px;
+  height: 1px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.blog-footer-elements {
+  margin-top: 40px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.blog-footer-link {
+  color: #5c8ee5;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 10px;
+  text-decoration: none;
+}
+
+.blog-footer-btn {
+  width: 160px;
+  height: 60px;
+  background-color: #5c8ee5;
+  border: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  gap: 40px;
+}
+
+.blog-footer-btn i {
+  color: white;
+  font-size: 30px;
+}
+
+.offer {
+  background-color: #f0f2f5;
+  margin-top: 100px;
+  position: relative;
+  height: 452px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.offer-spray-img {
+  position: absolute;
+  bottom: 0;
+  left: -50px;
+}
+
+.offer-container {
+  width: 700px;
+  padding: 0 50%;
+}
+
+.offer-form {
+  margin-top: 100px;
+  width: 700px;
+}
+
+.offer-text {
+  font-family: "Bebas Neue", sans-serif, sans-serif;
+  font-weight: 400;
+  font-size: 40px;
+  line-height: 120%;
+  letter-spacing: 0%;
+}
+
+.offer-subtext {
+  font-family: "Noto", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 160%;
+  letter-spacing: 0%;
+  color: #828a99;
+}
+
+.offer-input-text {
+  margin-top: 20px;
+  width: 300px;
+  height: 46px;
+  border: 1px #e4e4eb solid;
+  background-color: #f0f2f5;
+  border-radius: 5px;
+  padding: 15px;
+}
+
+.offer-input-phone {
+  width: 300px;
+  height: 46px;
+  border: 1px #e4e4eb solid;
+  background-color: #f0f2f5;
+  border-radius: 5px;
+  padding: 15px;
+}
+
+.offer-submit-btn {
+  margin-top: 20px;
+  width: 200px;
+  height: 50px;
+  border: none;
+  background-color: #5c8ee5;
+  color: white;
+  cursor: pointer;
+}
+
+.offer-verify-text {
+  margin-top: 25px;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 160%;
+  letter-spacing: 0%;
+  font-family: "Noto", sans-serif;
+  color: #828a99;
+}
+
+.offer-verify {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 20px;
+}
+
+.footer-ul {
+  margin-top: 100px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.footer-phone-contact {
+  text-decoration: underline;
+  font-weight: bold;
+  font-size: 28px;
+}
+
+.footer-addres {
+  font-family: Noto Sans;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 160%;
+  letter-spacing: 0%;
+  text-decoration: none;
+}
+
+.footer-list-item i {
+  color: #5c8ee5;
+}
+
+.footer-main-ul {
+  list-style: none;
+}
+
+.footer-main {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 /*# sourceMappingURL=sass.css.map */
