--- a/contract/scss/style.scss
+++ b/contract/scss/style.scss
@@ -145,3 +145,201 @@
     margin-top: 70px;
     color: rgba(130, 138, 153, 1);
 }
+
+.about-products{
+    margin-top: 200px;
+    margin-bottom: 100px;
+}
+
+.contract-product-seo{
+    margin-top: 100px;
+}
+
+.seo-text{
+    font-family: $subtext-font, sans-serif;
+    font-weight: 400;
+    font-size: 28px;
+    line-height: 160%;
+    letter-spacing: 0%;
+}
+
+.seo-subtext{
+    font-family: Noto Sans;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 160%;
+    letter-spacing: 0%;
+    color: rgba(130, 138, 153, 1);
+}
+
+.contract-product-seo i{
+    color: $main-color;
+    gap: 10px;
+}
+
+.seo-span{
+    color: $main-color;
+    font-size: 14px;
+}
+
+.offer{
+    background-color: rgba(240, 242, 245, 1);
+    margin-top: 200px;
+    position: relative;
+    height: 452px;
+    display: flex;
+}
+
+.offer-spray-img{
+    position: absolute;
+    bottom: 0;
+    left: -50px;
+}
+
+.offer-container{
+    width: 700px;
+    padding: 0 50%;
+}
+
+.offer-form{
+    margin-top: 100px;
+    width: 700px;
+}
+
+.offer-text{
+    font-family: $main-font, sans-serif;
+    font-weight: 400;
+    font-size: 40px;
+    line-height: 120%;
+    letter-spacing: 0%;
+}
+
+.offer-subtext{
+    font-family: $subtext-font,sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 160%;
+    letter-spacing: 0%;
+    color: rgba(130, 138, 153, 1);
+}
+
+.offer-input-text{
+    margin-top: 20px;
+    width: 300px;
+    height: 46px;
+    border: 1px rgba(228, 228, 235, 1) solid;
+    background-color: rgba(240, 242, 245, 1);
+    border-radius: 5px;
+    padding: 15px;
+}
+
+.offer-input-phone{
+    width: 300px;
+    height: 46px;
+    border: 1px rgba(228, 228, 235, 1) solid;
+    background-color: rgba(240, 242, 245, 1);
+    border-radius: 5px;
+    padding: 15px;
+}
+
+.offer-submit-btn{
+    margin-top: 20px;
+    width: 200px;
+    height: 50px;
+    border: none;
+    background-color: $main-color;
+    color: white;
+    cursor: pointer;
+}
+
+.offer-verify-text{
+    margin-top: 25px;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 160%;
+    letter-spacing: 0%;
+    font-family: $subtext-font,sans-serif;
+    color: rgba(130, 138, 153, 1);
+    
+}
+
+.offer-verify{
+    display: flex;
+    gap: 20px;
+}
+
+
+.footer-hr{
+    margin: 50px 0 0 0;
+}
+
+.footer-ul{
+    margin-top: 50px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.footer-phone-contact{
+    text-decoration: underline;
+    font-weight: bold;
+    font-size: 28px;
+}
+
+.footer-addres{
+    font-family: Noto Sans;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 160%;
+    letter-spacing: 0%;
+    text-decoration: none;
+}
+
+.footer-list-item i{
+    color: $main-color;
+}
+
+.footer-main-ul{
+    list-style: none;
+}
+
+.footer-main{
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer-main-list-item{
+    margin: 10px 0 0 10px;
+    color: rgba(130, 138, 153, 1);
+    font-family: Noto Sans;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 160%;
+    letter-spacing: 0%;
+}
+
+.footer-main-info2{
+    margin-top: 35px;
+}
+
+.footer-main-col1, .footer-main-col2{
+    font-family: $subtext-font, sans-serif;
+    font-size: 16px;
+    font-weight: 600;
+    letter-spacing: 0%;
+    line-height: 160%;
+    color: black;
+}
+
+.footer-last{
+    height: 80px;
+    display: flex;
+    justify-content: space-between;
+    color: rgba(130, 138, 153, 1);
+    align-items: center;
+}
+
+.footer-last-info{
+    gap: 90px;
+    display: flex;
+}
