--- a/contract/scss/style.css
+++ b/contract/scss/style.css
@@ -52,7 +52,7 @@ body {
 
 @media (max-width: 768px) {
   #hero {
-    height: 1300px;
+    height: 90px;
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
@@ -62,6 +62,114 @@ body {
 @media (max-width: 768px) {
   #hero-about-company {
     margin-top: 50px;
+  }
+}
+
+@media (max-width: 768px) {
+  body .about-products {
+    margin-top: 60px;
+  }
+  body .contract-product1 {
+    display: block;
+  }
+  body .contract-product2 {
+    display: block;
+  }
+  body .offer-spray-img {
+    display: none;
+  }
+  body .offer-container {
+    padding: 0;
+  }
+  body .offer-container .offer-form {
+    margin-top: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  body .offer-verify {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  body .offer {
+    height: 540px;
+  }
+  .offer-form input {
+    width: 400px;
+    margin-top: 10px;
+  }
+  .offer-form button {
+    width: 400px;
+  }
+  body .footer-ul {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: start;
+    padding: 0;
+    margin: 0;
+  }
+  body .footer-main {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    padding: 0;
+    margin: 0;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: start;
+  }
+  .footer-main ul {
+    padding: 0;
+    margin: 0;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: start;
+  }
+  body .footer-main-info2 {
+    margin: 5px 0;
+  }
+  body .footer-last {
+    display: block;
+  }
+  body .footer-last-info {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    padding: 0;
+    margin: 0;
+    gap: 10px;
   }
 }
 
