added burger menu but it doesnt working

--- a/Scss/sass.css
+++ b/Scss/sass.css
@@ -8,14 +8,28 @@ body {
 }
 
 @media (max-width: 1000px) {
-  .hero-navigation li {
+  .hero-nav-links li {
     display: none;
   }
 }
 
-@media (max-width: 590px) {
-  .hero-call, .fa-solid {
+@media (max-width: 1000px) {
+  div .hero-call, .fa-solid {
     display: none;
+  }
+}
+
+@media (max-width: 1000px) {
+  .hero-nav-links {
+    display: none;
+  }
+  body .burger-menu {
+    display: block;
+  }
+  .burger-input:checked ~ .hero-nav-links-active {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
   }
 }
 
@@ -314,6 +328,32 @@ body {
   background-color: #1a2538;
   opacity: 0.4;
   z-index: -1;
+}
+
+.hero-nav-links-active {
+  display: none;
+}
+
+.burger-menu {
+  display: none;
+}
+
+.burger-menu:active {
+  display: none;
+}
+
+.burger-input {
+  display: none;
+}
+
+#checkbox:checked ~ .hero-nav-links-active {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .hero-navbar {
