--- a/Scss/sass.scss
+++ b/Scss/sass.scss
@@ -31,6 +31,27 @@
     z-index: -1;
 }
 
+.hero-nav-links-active{
+    display: none;
+}
+
+.burger-menu{
+    display: none;
+}
+
+.burger-menu:active{
+    display: none;
+}
+
+.burger-input{
+    display: none;
+}
+
+#checkbox:checked ~ .hero-nav-links-active{
+    display: flex;
+    flex-direction: column;
+}
+
 .hero-navbar{
     display: flex;
     justify-content: space-between;
