--- a/contacs/scss/style.css
+++ b/contacs/scss/style.css
@@ -13,8 +13,8 @@ body {
   }
 }
 
-@media (max-width: 590px) {
-  .hero-call, .fa-solid {
+@media (max-width: 1000px) {
+  div .hero-call, .fa-solid {
     display: none;
   }
 }
@@ -52,7 +52,7 @@ body {
 
 @media (max-width: 768px) {
   #hero {
-    height: 1300px;
+    height: 90px;
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
@@ -62,6 +62,208 @@ body {
 @media (max-width: 768px) {
   #hero-about-company {
     margin-top: 50px;
+  }
+}
+
+@media (max-width: 768px) {
+  body .about-products {
+    margin-top: 60px;
+  }
+  body .contract-product1 {
+    display: block;
+  }
+  body .contract-product2 {
+    display: block;
+  }
+  body .offer-spray-img {
+    display: none;
+  }
+  body .offer-container {
+    padding: 0;
+  }
+  body .offer-container .offer-form {
+    margin-top: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  body .offer-verify {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  body .offer {
+    height: 540px;
+  }
+  .offer-form input {
+    width: 400px;
+    margin-top: 10px;
+  }
+  .offer-form button {
+    width: 400px;
+  }
+  body .footer-ul {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: start;
+    padding: 0;
+    margin: 0;
+  }
+  body .footer-main {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    padding: 0;
+    margin: 0;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: start;
+  }
+  .footer-main ul {
+    padding: 0;
+    margin: 0;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: start;
+  }
+  body .footer-main-info2 {
+    margin: 5px 0;
+  }
+  body .footer-last {
+    display: block;
+  }
+  body .footer-last-info {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    padding: 0;
+    margin: 0;
+    gap: 10px;
+  }
+}
+
+@media (max-width: 768px) {
+  body .mark-sections {
+    display: block;
+    width: 400px;
+  }
+  #galery-pagination {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+  body .mark-left-side {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    width: 345px;
+    height: 380px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    font-size: 14px;
+  }
+  body .mark-right-side {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    width: 345px;
+    height: 380px;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    font-size: 14px;
+  }
+  .galery div {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
+@media (max-width: 600px) {
+  body .blog-left-side {
+    width: 400px;
+    height: 250px;
+  }
+  body .blog-left-text {
+    font-size: 25px;
+  }
+  body .blog-left-subtext {
+    display: none;
+  }
+}
+
+@media (max-width: 600px) {
+  body .blog-right-side {
+    width: 400px;
+    height: 250px;
+  }
+  body .blog-right-text {
+    font-size: 25px;
+  }
+  body .blog-right-subtext {
+    display: none;
+  }
+  div .galery-pagination {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+}
+
+@media (max-width: 600px) {
+  #map-img {
+    height: 300px !important;
+    width: 100% !important;
+    -o-object-fit: cover;
+       object-fit: cover;
+    display: block;
   }
 }
 
