--- a/contract/scss/__media.scss
+++ b/contract/scss/__media.scss
@@ -4,8 +4,8 @@
     }
 }
 
-@media(max-width: 590px){
-    .hero-call, .fa-solid{
+@media(max-width: 1000px){
+    div .hero-call, .fa-solid{
         display: none;
     }
 }
