--- a/contacs/scss/__media.scss
+++ b/contacs/scss/__media.scss
@@ -1,11 +1,21 @@
 @media(max-width: 1000px){
-    .hero-navigation li{
+    .hero-nav-links li{
         display: none;
     }
 }
+
 @media(max-width: 1000px){
     div .hero-call, .fa-solid{
         display: none;
+    }
+}
+
+@media(max-width: 1000px){
+    .hero-nav-links{
+        display: none;
+    }
+    body .burger-menu{
+        display: block;
     }
 }
 
