--- a/blog/scss/__media.scss
+++ b/blog/scss/__media.scss
@@ -1,14 +1,23 @@
 @media(max-width: 1000px){
-    .hero-navigation li{
+    .hero-nav-links li{
         display: none;
     }
 }
+
 @media(max-width: 1000px){
     div .hero-call, .fa-solid{
         display: none;
     }
 }
 
+@media(max-width: 1000px){
+    .hero-nav-links{
+        display: none;
+    }
+    body .burger-menu{
+        display: block;
+    }
+}
 @media(max-width: 590px){
     .hero-navigation{
         width: 160px;
