--- a/contract/scss/__media.scss
+++ b/contract/scss/__media.scss
@@ -1,5 +1,5 @@
 @media(max-width: 1000px){
-    .hero-navigation li{
+    .hero-nav-links li{
         display: none;
     }
 }
@@ -7,6 +7,15 @@
 @media(max-width: 1000px){
     div .hero-call, .fa-solid{
         display: none;
+    }
+}
+
+@media(max-width: 1000px){
+    .hero-nav-links{
+        display: none;
+    }
+    body .burger-menu{
+        display: block;
     }
 }
 
