--- a/our-product/scss/style.scss
+++ b/our-product/scss/style.scss
@@ -27,6 +27,34 @@
     justify-content: center;
 }
 
+.hero-nav-links-active{
+    display: none;
+}
+
+.burger-menu{
+    display: none;
+}
+
+.burger-menu:active{
+    display: flex;
+}
+
+.burger-input{
+    display: none;
+}
+
+#checkbox:checked ~ .hero-nav-links-active{
+    display: flex;
+    flex-direction: column;
+    padding-top: 70px;
+    // background-color: rgba(255, 228, 196, 0.463);
+    // border-radius: 10px;
+    margin-top: 20px;
+    text-decoration: underline;
+    text-decoration-color: black;
+}
+
+
 .hero-navbar a, li{
     text-decoration: none;
     list-style: none;
