--- a/our-product/scss/__media.scss
+++ b/our-product/scss/__media.scss
@@ -19,6 +19,23 @@
     }
 }
 
+
+@media(max-width: 600px){
+    body .offer-subtext{
+        font-size: 12px;
+    }
+}
+
+@media(max-width: 760px){
+    .hero-main div{
+        // margin: auto;
+        justify-content: center;
+        position: relative;
+        margin-top: 20px;
+        justify-items: right;
+    }
+}
+
 @media(max-width: 590px){
     .hero-navigation{
         width: 160px;
