--- a/our-product/scss/style.scss
+++ b/our-product/scss/style.scss
@@ -29,6 +29,32 @@
 
 .hero-nav-links-active{
     display: none;
+    position: absolute;
+    top: 70px;
+    left: 0;
+    width: 100%;
+    flex-direction: column;
+    background-color: rgba(0, 0, 0, 0.9);
+    padding: 20px;
+    border-radius: 0 0 10px 10px;
+    z-index: 999;
+    transition: all 0.4s ease;
+}
+
+.hero-nav-links-active li a {
+    color: white;
+    padding: 10px;
+    font-size: 18px;
+    text-decoration: none;
+}
+
+.hero-nav-links-active li a:hover {
+    text-decoration: underline;
+    text-decoration-color: white;
+}
+
+.hero-nav-links-active{
+    display: none;
 }
 
 .burger-menu{
