--- a/Scss/__media.scss
+++ b/Scss/__media.scss
@@ -35,10 +35,19 @@
     }
 }
 
+@media(max-width: 600px){
+    body .offer-subtext{
+        font-size: 12px;
+    }
+}
+
 @media(max-width: 760px){
     .hero-main div{
-        margin: auto;
+        // margin: auto;
         justify-content: center;
+        position: relative;
+        margin-top: 20px;
+        justify-items: right;
     }
 
     #hero-main-text{
@@ -61,7 +70,7 @@
 
 @media(max-width: 768px){
     #hero{
-        height: 1150px;
+        height: 1280px;
         justify-content: center;
     }
 }
