--- a/Scss/sass.css
+++ b/Scss/sass.css
@@ -42,12 +42,20 @@ body {
   }
 }
 
+@media (max-width: 600px) {
+  body .offer-subtext {
+    font-size: 12px;
+  }
+}
+
 @media (max-width: 760px) {
   .hero-main div {
-    margin: auto;
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
+    position: relative;
+    margin-top: 20px;
+    justify-items: right;
   }
   #hero-main-text {
     font-size: 38px;
@@ -69,7 +77,7 @@ body {
 
 @media (max-width: 768px) {
   #hero {
-    height: 1150px;
+    height: 1280px;
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
@@ -323,6 +331,37 @@ body {
   background-color: #1a2538;
   opacity: 0.4;
   z-index: -1;
+}
+
+.hero-nav-links-active {
+  display: none;
+  position: absolute;
+  top: 70px;
+  left: 0;
+  width: 100%;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  background-color: rgba(0, 0, 0, 0.9);
+  padding: 20px;
+  border-radius: 0 0 10px 10px;
+  z-index: 999;
+  -webkit-transition: all 0.4s ease;
+  transition: all 0.4s ease;
+}
+
+.hero-nav-links-active li a {
+  color: white;
+  padding: 10px;
+  font-size: 18px;
+  text-decoration: none;
+}
+
+.hero-nav-links-active li a:hover {
+  text-decoration: underline;
+  -webkit-text-decoration-color: white;
+          text-decoration-color: white;
 }
 
 .hero-nav-links-active {
