--- a/blog/scss/__media.scss
+++ b/blog/scss/__media.scss
@@ -49,6 +49,23 @@
     }
 }
 
+@media(max-width: 600px){
+    body .offer-subtext{
+        font-size: 12px;
+    }
+}
+
+@media(max-width: 760px){
+    .hero-main div{
+        // margin: auto;
+        justify-content: center;
+        position: relative;
+        margin-top: 20px;
+        justify-items: right;
+    }
+}
+
+
 @media(max-width: 768px){
     #hero{
         height: 90px;
