--- a/blog/scss/style.css
+++ b/blog/scss/style.css
@@ -59,6 +59,23 @@ body {
   }
 }
 
+@media (max-width: 600px) {
+  body .offer-subtext {
+    font-size: 12px;
+  }
+}
+
+@media (max-width: 760px) {
+  .hero-main div {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    position: relative;
+    margin-top: 20px;
+    justify-items: right;
+  }
+}
+
 @media (max-width: 768px) {
   #hero {
     height: 90px;
@@ -305,6 +322,64 @@ body {
 
 .hero-nav-links-active {
   display: none;
+  position: absolute;
+  top: 70px;
+  left: 0;
+  width: 100%;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  background-color: rgba(0, 0, 0, 0.9);
+  padding: 20px;
+  border-radius: 0 0 10px 10px;
+  z-index: 999;
+  -webkit-transition: all 0.4s ease;
+  transition: all 0.4s ease;
+}
+
+.hero-nav-links-active li a {
+  color: white;
+  padding: 10px;
+  font-size: 18px;
+  text-decoration: none;
+}
+
+.hero-nav-links-active li a:hover {
+  text-decoration: underline;
+  -webkit-text-decoration-color: white;
+          text-decoration-color: white;
+}
+
+.hero-nav-links-active {
+  display: none;
+  position: absolute;
+  top: 70px;
+  left: 0;
+  width: 100%;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  background-color: rgba(0, 0, 0, 0.9);
+  padding: 20px;
+  border-radius: 0 0 10px 10px;
+  z-index: 999;
+  -webkit-transition: all 0.4s ease;
+  transition: all 0.4s ease;
+}
+
+.hero-nav-links-active li a {
+  color: white;
+  padding: 10px;
+  font-size: 18px;
+  text-decoration: none;
+}
+
+.hero-nav-links-active li a:hover {
+  text-decoration: underline;
+  -webkit-text-decoration-color: white;
+          text-decoration-color: white;
 }
 
 .burger-menu {
